--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 "lucide-react": "^0.447.0",
 "react": "^18.3.1",
 "react-dom": "^18.3.1",
+"@types/node": "^20.0.0",
 "react-financial-charts": "^2.0.1"
 },
 "devDependencies": {
